<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F44336"
    android:backgroundTint="#EDEBEB"
    tools:context=".GestionarEventoActivity1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="729dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#E71313"
            android:text="@string/tickets"
            android:textAlignment="center"
            android:textColor="#F2EDED"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/f1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/panel_de_administraci_n_eventos"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#D32F2F"
            android:text="@string/agregar"
            android:textColor="#FFFFFF" />


        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="#D32F2F"
            android:text="@string/consultar"
            android:textColor="#FFFFFF" />


        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="#D32F2F"
            android:text="@string/modificar"
            android:textColor="#FFFFFF" />


        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="#D32F2F"
            android:text="@string/eliminar"
            android:textColor="#FFFFFF" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

