<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    android:foregroundTint="#FF9800"
    tools:context=".AgregarEventoActivity">

    <LinearLayout
        android:layout_width="470dp"
        android:layout_height="716dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EF1010"
            android:text="@string/tickets"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#F6F3F3"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="219dp"
            app:srcCompat="@drawable/f1" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingrese_los_campos_requeridos"
            android:textAlignment="center"
            android:textColor="#805F5F"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Nombre"
                android:textAlignment="center"
                android:textColor="#0D0101" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="54dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="147dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/disponibilidad"
                    android:textAlignment="center"
                    android:textColor="#141313" />

                <EditText
                    android:id="@+id/editTextText5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text" />
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="181dp"
                    android:layout_height="34dp"
                    android:layout_weight="1"
                    android:text="@string/fecha"
                    android:textAlignment="center"
                    android:textColor="#100F0F" />

                <EditText
                    android:id="@+id/editTextText10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text" />

            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="52dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="195dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:text="@string/descripcion"
                    android:textAlignment="center"
                    android:textColor="#1A1818" />

                <EditText
                    android:id="@+id/editTextText11"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text" />
            </LinearLayout>
        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="187dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/precio_vip"
                        android:textAlignment="center"
                        android:textColor="#262323" />

                    <EditText
                        android:id="@+id/editTextNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number" />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="201dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="precio normal"
                        android:textAlignment="center"
                        android:textColor="#121111" />

                    <EditText
                        android:id="@+id/editTextNumber2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number" />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="38dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView34"
                        android:layout_width="213dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/lugar"
                        android:textAlignment="center"
                        android:textColor="#141212" />

                    <EditText
                        android:id="@+id/editTextText12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="text" />
                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button11"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:text="@string/agregar" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Regresar" />
            </LinearLayout>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>